--- a/packages/marketing/app/globals.css
+++ b/packages/marketing/app/globals.css
@@ -169,7 +169,7 @@
 
   .dark {
     --sidebar-width: 20rem; /* Sidebar width */
-    --sidebar-width-mobile: 90%; /* Mobile sidebar width */
+    --sidebar-width-mobile: 60%; /* Mobile sidebar width */
     --sidebar-background: hsl(0 69% 10%); /* Updated to match #290B0A */
     --sidebar-foreground: hsl(0 0% 100%);
     --sidebar-primary: hsl(0 69% 10%); /* Updated to match sidebar background */
